--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/mistral": "^0.0.37",
+    "@clerk/nextjs": "^5.3.3",
+    "@huggingface/inference": "^2.8.0",
+    "@mistralai/mistralai": "^1.0.4",
     "@pinecone-database/pinecone": "^3.0.1",
+    "ably": "^2.3.1",
+    "ai": "^3.3.16",
     "langchain": "^0.2.16",
+    "ldrs": "^1.0.2",
+    "lucide-react": "^0.429.0",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "together-ai": "^0.6.0-alpha.4"
   },
   "devDependencies": {
     "eslint": "^8",
