--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
   "dependencies": {
     "@ai-sdk/mistral": "^0.0.37",
     "@clerk/nextjs": "^5.3.3",
+    "@headlessui/react": "^2.1.3",
     "@huggingface/inference": "^2.8.0",
     "@mistralai/mistralai": "^1.0.4",
     "@pinecone-database/pinecone": "^3.0.1",
     "ably": "^2.3.1",
     "ai": "^3.3.16",
+    "date-fns": "^3.6.0",
+    "firebase": "^10.13.0",
     "langchain": "^0.2.16",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.429.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-loading-skeleton": "^3.4.0",
     "together-ai": "^0.6.0-alpha.4"
   },
   "devDependencies": {
