--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@huggingface/inference": "^2.8.0",
     "@mistralai/mistralai": "^1.0.4",
     "@pinecone-database/pinecone": "^3.0.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "ably": "^2.3.1",
     "ai": "^3.3.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
     "langchain": "^0.2.16",
@@ -26,6 +30,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-loading-skeleton": "^3.4.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.6.0-alpha.4"
   },
   "devDependencies": {
